<resources xmlns:tools="http://schemas.android.com/tools" translatable="false">
    <string name="game_view_content_description">Game view</string>
    <string name="app_name">特戒盒子</string>
    <!--    <string name="app_name">特戒</string>-->
    <string name="network_fail_to_connect">联网失败,请检查网络</string>
    <string name="network_fail_to_request">联网请求失败,请重新尝试</string>
    <string name="network_fail_to_responseDate">数据格式错误,请重新尝试</string>

    <string name="share">分享</string>
    <string name="sure">确认</string>
    <string name="copy_success">已复制到粘贴板</string>
    <string name="app_downloading" tools:ignore="TypographyEllipsis">急速更新中...</string>

    <!--login-->
    <string name="login_welcome">欢迎登录</string>
    <string name="CN">CN +86</string>
    <string name="please_enter_phone">请输入手机号码</string>
    <string name="login">登录/注册</string>
    <string name="login_quick">一键登录/注册</string>
    <string name="login_other_phone">其他手机号登录</string>
    <string name="login_tips">我已阅读且同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="privacy_agreement">《隐私协议》</string>
    <string name="please_enter_code">请输入验证码</string>
    <string name="send_to">已发送至</string>
    <string name="resend">重新发送</string>

    <!--main-->
    <string name="update_cancel">暂不更新</string>
    <string name="pc">PC</string>
    <string name="phone">手游</string>
    <string name="double_click_quit">双击退出</string>

    <!--Me-->
    <string name="current_version">当前版本</string>

    <!--UserInfo-->
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <!--ChangePhone-->
    <string name="change_phone">更换手机号</string>
    <string name="change_phone_tips">更换手机号后，下次登录可以使用新手机号登录。</string>
    <string name="current_phone">当前手机号</string>
    <string name="enter_new_phone">输入需要更换的手机号</string>
    <string name="next">下一步</string>
    <string name="please_enter_right_phone">请输入正确的手机号</string>
    <string name="change_phone_success">修改手机号成功</string>

    <!--Search-->
    <string name="show_all">展开所有</string>
    <string name="clear_all">清除搜索记录</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_hint">请输入游戏ID/游戏名搜索</string>

    <!--detail-->
    <string name="update_today">今日更新</string>
    <string name="days">天前</string>
    <string name="save_pic_success">已保存至手机相册</string>
    <string name="save_pic_fail">下载保存到本地失败</string>

    <!--下载游戏-->
    <string name="open">开启</string>
    <string name="exchange">兑换</string>
    <string name="residue">剩余</string>
    <string name="daily_check">每日签到</string>
    <string name="limit_white_piao">限时白嫖</string>
    <string name="invite_gift">邀请大礼</string>
    <string name="day">第X天</string>
    <string name="signed">已签到</string>
    <string name="get_integral">获得 X 个金币</string>
    <string name="get_experience">获得X经验</string>
    <string name="time_5_9" tools:ignore="TypographyDashes">05:00 - 09:00</string>
    <string name="time_10_14" tools:ignore="TypographyDashes">10:00 - 14:00</string>
    <string name="time_15_19" tools:ignore="TypographyDashes">15:00 - 19:00</string>
    <string name="time_20_24" tools:ignore="TypographyDashes">20:00 - 24:00</string>
    <string name="overdue">已过期</string>
    <string name="can_get">可领取</string>
    <string name="get">领取</string>
    <string name="invite_success">成功邀请好友即可获得</string>
    <string name="can_obtain">即可获得</string>
    <string name="complete_goal">完成目标</string>
    <string name="update_app_level">将APP等级提升至X级</string>
    <string name="share_tips">每日首次分享至微信或者QQ可获得X金币</string>
    <string name="level_update_share_title">万款游戏,随便玩</string>
    <string name="level_update_share_msg">充值礼包/元宝回收/免费泡点/满级VIP/……只要你能想到的,我们这里,应有尽有!</string>

    <!--android 8.0适配安装-->
    <string name="author_fail">授权失败,无法安装更新应用</string>

    <!--20210823-->
    <string name="string_048">取消收藏</string>
    <string name="string_049">收藏成功</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account_safe">AccountSafeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>