<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_account_login_back"
        android:layout_width="@dimen/dp_32"
        android:layout_height="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_48"
        android:src="@mipmap/login_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/login_welcome"
        android:textColor="#0E0631"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_account_login_title"
        android:layout_width="@dimen/dp_173"
        android:layout_height="@dimen/dp_46"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@mipmap/app_title" />

    <EditText
        android:id="@+id/et_account_login_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_90"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@drawable/bg_phone_enter"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="请输入登录账号"
        android:inputType="textVisiblePassword"
        android:maxLength="17"
        android:maxLines="1"
        android:padding="@dimen/dp_10"
        android:textColor="#0A0422"
        android:textColorHint="#CAC9CE"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@drawable/bg_phone_enter"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_account_login_pass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="请输入登录密码"
            android:inputType="textPassword"
            android:maxLength="17"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textColor="#0A0422"
            android:textColorHint="#CAC9CE"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/iv_account_login_pass"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:padding="@dimen/dp_12"
            android:src="@mipmap/pass_show" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_account_login_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_32"
        android:background="@drawable/bg_btn"
        android:clickable="false"
        android:gravity="center"
        android:text="登录"
        android:textColor="@color/white_FFFFFF"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_account_login_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_32"
        android:padding="@dimen/dp_10"
        android:text="注册账号"
        android:textColor="#990A0422" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_account_login"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:background="@drawable/check_style"
            android:button="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tips"
            android:textColor="#0A0422"
            android:textSize="@dimen/sp_11" />

        <TextView
            android:id="@+id/tv_account_login_userAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="#5F60FF"
            android:textSize="@dimen/sp_11"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_account_login_privacyAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_agreement"
            android:textColor="#5F60FF"
            android:textSize="@dimen/sp_11"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>